PA-1214 PIN PARCEL, enhance dropping draft parcel/building markers. Create new draft marker types. Always display all lat/lng markers that differ from db markers as draft markers. Display marker cursor when dropping a marker. Do not drop markers on map click unless marker cursor is displayed. Do not change cursor on last updated by. Dynamically set height of scroll container at bottom of parceldetailform. Correct scrolling bug caused by visibility detector.

--- a/frontend/src/features/properties/components/forms/ParcelDetailForm.scss
+++ b/frontend/src/features/properties/components/forms/ParcelDetailForm.scss
@@ -115,13 +115,16 @@
         width: 120px;
       }
       .input-medium {
-        min-width: 150px;
-        width: 150px;
+        min-width: 220px;
+        width: 220px;
       }
     }
   }
   .table {
     margin: 0;
+    .tr {
+      height: 55px;
+    }
     .th,
     .td {
       padding: 5px;
